[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme/default/default.theme" type="Theme" id=1]
[ext_resource path="res://ui/gui/battle/inventoryCard.gd" type="Script" id=2]

[node name="moveCard" type="MarginContainer"]
margin_right = 200.0
margin_bottom = 48.0
rect_min_size = Vector2( 200, 0 )
script = ExtResource( 2 )

[node name="bg" type="Panel" parent="."]
margin_right = 200.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="btnConfirm" type="Button" parent="."]
margin_right = 200.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
flat = true

[node name="text" type="VBoxContainer" parent="."]
margin_right = 200.0
margin_bottom = 48.0
mouse_filter = 2

[node name="lblName" type="Label" parent="text"]
margin_right = 200.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "[ %s ]"
align = 1

[node name="lblTimer" type="Label" parent="text"]
margin_top = 26.0
margin_right = 200.0
margin_bottom = 48.0
size_flags_horizontal = 3
text = "%0.2fs / %0.2fs"
align = 1

[connection signal="focus_entered" from="btnConfirm" to="." method="_on_btnConfirm_focus_entered"]
[connection signal="pressed" from="btnConfirm" to="." method="_on_btnConfirm_pressed"]
